Added Role and Education

--- a/HTML- Personal site/index.html
+++ b/HTML- Personal site/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
 
+    <h1> Hritik Raj </h1>
+    <hr size="3" noshade>
+    <p> <em>Student at <b><u>BITS Pilani</u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
+    <p> working as a <em><u>Summer Intern</u></em> at <em><b>Goavega Software</b></em>,Bangalore</p>
+    <hr>
+    <h3> Education</h3>
+
   </body>
 </html>
