Added contact, hobbies

--- a/HTML- Personal site/index.html
+++ b/HTML- Personal site/index.html
@@ -5,13 +5,23 @@
     <title>Hritik's Personal site</title>
   </head>
   <body>
+    <img width="150" height="150" src="Hritik.png" alt="Hritik's Profile snap">
 
     <h1> Hritik Raj </h1>
     <hr size="3" noshade>
-    <p> <em>Student at <b><u>BITS Pilani</u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
-    <p> working as a <em><u>Summer Intern</u></em> at <em><b>Goavega Software</b></em>,Bangalore</p>
+    <p> <em>Student at <b><u><a href="https://www.bits-pilani.ac.in/hyderabad/">BITS Pilani</a></u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
+    <p> working as a <em><b>Summer Intern</b></em> at <em><b><a href="https://www.goavega.com/">Goavega Software, Bangalore</a></b></em></p>
     <hr>
     <h3> Education</h3>
-
+    <ul>
+      <li>Studied at Sri Chaitanya coaching</li>
+      <li>Undergrad at BITS Pilani</li>
+    </ul>
+    <a href="H:\Web Development\HTML- Personal site\My hobbies.html">My hobbies</a>
+    <h3>Contact details</h3>
+    <ul>
+      <li><a href="H:\Web Development\HTML- Personal site\Contact.html">Here y'go</a>
+</li>
+    </ul>
   </body>
 </html>
