added table, skills

--- a/HTML- Personal site/index.html
+++ b/HTML- Personal site/index.html
@@ -5,18 +5,51 @@
     <title>Hritik's Personal site</title>
   </head>
   <body>
-    <img width="150" height="150" src="Hritik.png" alt="Hritik's Profile snap">
+    <table>
+      <tr>
+        <td><img width="150" height="150" src="Hritik.png" alt="Hritik's Profile snap"></td>
+        <td>  <h1> Hritik Raj </h1>
+              <p> <em>Student at <b><u><a href="https://www.bits-pilani.ac.in/hyderabad/">BITS Pilani</a></u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
+              <p> working as a <em><b>Summer Intern</b></em> at <em><b><a href="https://www.goavega.com/">Goavega Software, Bangalore</a></b></em></p>
+        </td>
+      </tr>
+    </table>
 
-    <h1> Hritik Raj </h1>
+
+
     <hr size="3" noshade>
-    <p> <em>Student at <b><u><a href="https://www.bits-pilani.ac.in/hyderabad/">BITS Pilani</a></u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
-    <p> working as a <em><b>Summer Intern</b></em> at <em><b><a href="https://www.goavega.com/">Goavega Software, Bangalore</a></b></em></p>
-    <hr>
     <h3> Education</h3>
     <ul>
       <li>Studied at Sri Chaitanya coaching</li>
       <li>Undergrad at BITS Pilani</li>
     </ul>
+    <hr size="3" noshade >
+    <h3>Skills </h3>
+    <table cellspacing="9">
+          <tr>
+            <td>C </td>
+            <td>⭐⭐⭐⭐</td>
+            <td>C++ </td>
+            <td>⭐⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Java</td>
+            <td>⭐⭐</td>
+            <td>Git</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+          <td>SQL</td>
+          <td>⭐⭐</td>
+          <td>Golang</td>
+          <td>⭐</td>
+          </tr>
+          <tr>
+            <td>HTML</td>
+            <td>⭐⭐</td>
+          </tr>
+    </table>
+    <br>
     <a href="H:\Web Development\HTML- Personal site\My hobbies.html">My hobbies</a>
     <h3>Contact details</h3>
     <ul>
