added form to contact

--- a/HTML- Personal site/Contact.html
+++ b/HTML- Personal site/Contact.html
@@ -13,5 +13,15 @@
       <li><a href="hritikraj_03@Outlook.com">hritikraj_03@Outlook.com</a></li>
     </ul>
   </p>
+  <hr>
+  <form action="index.html" method="post">
+    <label for="Name">Yourname</label>
+    <input type="text" value="name"> <br>
+    <label for="Email">YourEmail</label>
+    <input type="email" value="Email" > <br>
+    <label for="YourMessege">YourMessege</label>
+    <textarea name="type your Messege here" rows="10" cols="30"></textarea> <br>
+    <input type="submit" >
+  </form>
   </body>
 </html>
