Added CSS styles to website

--- a/HTML- Personal site/Contact.html
+++ b/HTML- Personal site/Contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Connect me at</title>
+    <link rel="stylesheet" href="H:\Web Development\css\styles.css">
   </head>
   <body>
     <h3>Connect me at</h3>
