--- a/HTML- Personal site/index.html
+++ b/HTML- Personal site/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Hritik's Personal site</title>
+    <link rel="stylesheet" href="H:\Web Development\css\styles.css">
+
+
   </head>
   <body>
-    <table>
-      <tr>
-        <td><img width="150" height="150" src="Hritik.png" alt="Hritik's Profile snap"></td>
+    <table cellspacing="20">
+      <tr >
+        <td ><img width="150" height="150" src="Hritik.png" alt="Hritik's Profile snap"></td>
         <td>  <h1> Hritik Raj </h1>
               <p> <em>Student at <b><u><a href="https://www.bits-pilani.ac.in/hyderabad/">BITS Pilani</a></u></b></em><br><em>Hyderabad,INDIA 500076</em></p>
               <p> working as a <em><b>Summer Intern</b></em> at <em><b><a href="https://www.goavega.com/">Goavega Software, Bangalore</a></b></em></p>
@@ -15,9 +18,8 @@
       </tr>
     </table>
 
-
-
     <hr size="3" noshade>
+
     <h3> Education</h3>
     <ul>
       <li>Studied at Sri Chaitanya coaching</li>
@@ -47,9 +49,12 @@
           <tr>
             <td>HTML</td>
             <td>⭐⭐</td>
+            <td>CSS</td>
+            <td>⭐</td>
           </tr>
     </table>
     <br>
+    <hr size="3" noshade>
     <a href="H:\Web Development\HTML- Personal site\My hobbies.html">My hobbies</a>
     <h3>Contact details</h3>
     <ul>
